--- a/simora/src/main/resources/static/pages/indexA.html
+++ b/simora/src/main/resources/static/pages/indexA.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SIMORA</title>
-    <link rel="stylesheet" href="css/menu.css"/>
-    <link rel="stylesheet" href="css/indexP.css"/>
+    <link rel="stylesheet" href="/pages/css/menu.css"/>
+    <link rel="stylesheet" href="/pages/css/indexP.css"/>
 </head>
 <body>
     <div class="menu">
@@ -13,7 +13,7 @@
             <p>SIMORA</p>
         </div>
         <div class="photo">
-            <img src="images/Avatar.png" width="200px" height="200px">
+            <img src="/pages/images/Avatar.png" width="200px" height="200px">
         </div>
         <div class="info">
             <p>ID</p>
@@ -22,12 +22,14 @@
             <p>Departamenti i DEPT</p>
             <p>FSHMN</p>
         </div>
-        <div class="menuItems">
+        <div style="margin-top: 125px;" class="menuItems">
             <nav>
                 <ul>
                     <li><a href="#"> Orari i provimeve </a></li>
                     <hr>
-                    <li> <a href="#">Kontakto administratorin </a></li>
+                    <li> <a href="#">Kontakto profesoret </a></li>
+                    <hr>
+                    <li> <a href="#">Shto shfrytezues </a></li>
                     <hr>
                 </ul>
             </nav>
@@ -37,18 +39,39 @@
             <a href="#" id="changePass">Ndrysho fjalekalimin</a>
         </div>
     </div>
+
     <div class="content">
+        <div class="hover_bkgr_fricc">
+            <span class="helper"></span>
+            <div>
+                <div class="popupCloseButton">X</div>
+                <h3>Jeni te sigurt qe doni te fshini orarin me keto te dhena?</h3>
+                <p><b>ID:</b> 4</p>
+                <p><b>Salla:</b> Salla 153</p>
+                <p><b>Lenda:</b> Programimi i Distribuar</p>
+                <p><b>Profesori:</b> Ermir Rogova</p>
+                <p><b>Data:</b> 22.06.2020</p>
+                <p><b>Fillimi:</b> 10:00</p>
+                <p><b>Mbarimi:</b> 11:30</p>
+                <form action="#" method="GET">
+                    <input style="margin-left: 50px;" type="submit" value="PO">
+                    <input style="margin-right: 50px;"type="submit" value="JO">
+
+                </form>
+            </div>
+        </div>
         <div class="contentTitle">
             <h2>ORARI I PROVIMEVE</h2>
         </div>
 
-        <div class="filter">
+        <div style="width: 95%;" class="filter">
             <form action="#" method="GET">
                 <table>
                     <tr>
                         <th><label>Zgjedh daten:</label></th>
                         <th><label>Zgjedh departamentin:</label></th>
                         <th><label>Zgjedh sallen:</label></th>
+                        <th><label>Zgjedh profesorin:</label></th>
                         <th rowspan="2">
                             <input type="submit" value="Filtro">
                         </th>
@@ -70,6 +93,14 @@
                                 <option>Salla 153</option>
                                 <option>Salla 103</option>
                             </select>
+                        </td>
+                        <td>
+                            <datalist id="professorsM">
+                                <option>Ermir Rogova</option>
+                                <option>Eliot Bytyqi</option>
+                                <option>Artan Berisha</option>
+                            </datalist>
+                            <input type="text" list="professorsM">
                         </td>
                     </tr>
                 </table>
@@ -105,6 +136,22 @@
                     <td>13:30</td>
                 </tr>
             </table>
+        </div>
+        <div class="addRemove">
+            <form action="#" method="GET">
+                <label>Shkruaj ID e orarit:</label><input type="text">
+                <input type="submit" value="Fshij orar" id="removeSchedule">
+                <input type="submit" value="Shto orar" id="addSchedule">
+                <br>
+                <label>Profesori: Alban Elezi</label> <br>
+                <label>Lenda: Prog Dist</label> <br>
+                <label>Salla: 153</label>
+                
+                <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+                <script src="/pages/popup.js">
+                    
+                </script>
+            </form>
         </div>
     </div>
 </body>
