lidhja e frontit me back

--- a/simora/src/main/resources/static/pages/addSchedule.html
+++ b/simora/src/main/resources/static/pages/addSchedule.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SIMORA - Shto orar</title>
     <link rel="stylesheet" href="/pages/css/menu.css"/>
-    <link rel="stylesheet" href="pages/css/addUser.css"/>
+    <link rel="stylesheet" href="/pages/css/addUser.css"/>
 </head>
 <body>
     <div class="menu">
@@ -13,7 +13,7 @@
             <p>SIMORA</p>
         </div>
         <div class="photo">
-            <img src="pages/images/Avatar.png" width="200px" height="200px">
+            <img src="/pages/images/Avatar.png" width="200px" height="200px">
         </div>
         <div class="info">
             <p>ID</p>
@@ -45,7 +45,7 @@
             <h2>SHTO ORAR</h2>
         </div>
         <div class="addUser">
-            <form action="#" method="GET">
+            <form action="/g" method="GET">
                 <table>
                     <tr>
                         <td>
