--- a/simora/src/main/resources/static/pages/recoveryPassword.html
+++ b/simora/src/main/resources/static/pages/recoveryPassword.html
@@ -19,7 +19,7 @@
 
     <div class="login">
         <form action="#" method="post">
-            <img src="images/logo.png" alt="logo e UP" width="200px"/>
+            <img src="/pages/images/logo.png" alt="logo e UP" width="200px"/>
 
             <div class="id">
                 <label>Shkruaj fjalekalimin e ri:</label><br>
